[package]
name = "gh-server"
version = "0.1.0"
authors = ["James Tranovich <jtranovich@gmail.com>", "Anja Berens <pharaun666@gmail.com>"]
edition = "2018"

[dependencies]
juniper = "0.11"
juniper_warp = "0.2.0"
log = "0.4.3"
warp = "0.1.8"
clap = "2"

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]
