[package]
name = "gh-server"
version = "0.1.0"
authors = ["James Tranovich <jtranovich@gmail.com>", "Anja Berens <pharaun666@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
juniper = "0.11"
juniper_warp = "0.2.0"
log = "0.4.3"
r2d2_sqlite = "0.9.0"
r2d2 = "0.8.0"
warp = "0.1.8"

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled"]
